MODIFY: Upon each startup, priority will be given to attempting to use JavaFX UI. If JavaFX UI is unavailable due to the absence of the JavaFX runtime, it will switch to using Swing and attempt to download from the official source